<resources>
    <string name="app_name">Quiz App</string>
    <string name="cpp">Cpp</string>
    <string name="android">Android</string>
    <string name="xml">Xml</string>
    <string name="sql">Sql</string>
    <string name="core_java">Core Java</string>
    <string name="q1">Q1. What method you should override to use Android menu system?</string>
    <string name="android_quiz">ANDROID QUIZ</string>
    <string name="q2">What Activity method you use to retrieve a reference to an Android view by using the id attribute of a resource XML?</string>
    <string name="q3">Which of the following is not an Android component (i.e. a point from which the system can enter your application)?</string>
    <string name="q4">Which of the following is NOT a valid usage for Intents?</string>
    <string name="submit">Submit To Know Your Score</string>
    <string name="activate_a_sqlite_db_connection">Activate a SQLite DB Connection.</string>
    <string name="activate_a_service">Activate a Service</string>
    <string name="activate_a_broadcast_receiver">Activate a Broadcast receiver</string>
    <string name="activate_and_activity">Activate and Activity</string>
    <string name="contetnt_provider">Contetnt Provider</string>
    <string name="layout">Layout</string>
    <string name="activity">Activity</string>
    <string name="service">Service</string>
    <string name="findviewbyid_string_id">findViewById(String id)</string>
    <string name="retrieveresourcebyid_int_id">retrieveResourceById(int id)</string>
    <string name="findviewbyid_int_id">findViewById(int id)</string>
    <string name="findviewbyreference_int_id">findViewByReference(int id)</string>
    <string name="oncreatecontextmenu">onCreateContextMenu()</string>
    <string name="onmenucreated">onMenuCreated()</string>
    <string name="oncreatemenu">onCreateMenu()</string>
    <string name="oncreateoptionsmenu">onCreateOptionsMenu()</string>
    <string name="core_java_quiz">CORE JAVA QUIZ</string>
    <string name="what_is_the_range_of_short_data_type_in_java">What is the range of short data type in Java?</string>
    <string name="_128_to_127">-128 to 127</string>
    <string name="_32768_to_32767">-32768 to 32767</string>
    <string name="_2147483648_to_2147483647">-2147483648 to 2147483647</string>
    <string name="an_expression_involving_byte_int_and_literal_numbers_is_promoted_to_which_of_these">An expression involving byte, int, and literal numbers is promoted to which of these?</string>
    <string name="optint">int</string>
    <string name="optlong">long</string>
    <string name="optbyte">byte</string>
    <string name="optfloat">float</string>
    <string name="none_of_the_mentioned">None of the mentioned</string>
    <string name="what_is_jvm">What is JVM ?</string>
    <string name="type_your_answer">Type your answer</string>
    <string name="checkboxques">Which two are valid constructors for Thread? </string>
    <string name="thread_runnable_r_int_priority">Thread(Runnable r, int priority)</string>
    <string name="thread_runnable_r_threadgroup_g">Thread(Runnable r, ThreadGroup g)</string>
    <string name="thread_int_priority">Thread(int priority)</string>
    <string name="thread">Thread()</string>
    <string name="thread_runnable_r_string_name">Thread(Runnable r, String name)</string>
    <string name="checkanswer">Check your answer</string>
    <string name="for_correct_answer_1"><![CDATA[For correct answer --> +1]]></string>
    <string name="for_incorrect_answer_1"><![CDATA[For incorrect answer --> 0]]></string>
</resources>
