<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoreJava">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/mehrun"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/core_java_quiz"
            android:textColor="@color/white"
            android:background="@color/black"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"
            android:padding="15dp"


            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_Blue"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_the_range_of_short_data_type_in_java"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"

            />
        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:gravity="center"
            >
            <RadioButton
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_128_to_127"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:onClick="onRadioButtonClicked"

                />
            <RadioButton
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_32768_to_32767"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:onClick="onRadioButtonClicked"


                />
            <RadioButton
                android:id="@+id/b3"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_2147483648_to_2147483647"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:onClick="onRadioButtonClicked"


                />
            <RadioButton
                android:id="@+id/b4"
                android:buttonTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none_of_the_mentioned"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:onClick="onRadioButtonClicked"
                />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_Blue"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/an_expression_involving_byte_int_and_literal_numbers_is_promoted_to_which_of_these"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"

            />
        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:gravity="center"
            >
            <RadioButton
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optint"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optlong"
                android:textSize="16sp"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:onClick="onRadioButtonClicked"
                />

            <RadioButton
                android:id="@+id/b7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optbyte"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:buttonTint="@color/white"
                android:onClick="onRadioButtonClicked"


                />
            <RadioButton
                android:id="@+id/b8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optfloat"
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:onClick="onRadioButtonClicked"
                android:textSize="16sp"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/light_Blue"
            />
    </LinearLayout>

</ScrollView>

